--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1 class="hero__left-header">&larr;</h1>
         </div>
       </a>
-      <a href="youtube.com" class="hero__right">
+      <a href="TheCommunity/TheCommunity.html" class="hero__right">
         <div class="hero__right-flexbox hidden">
           <h1 class="hero__right-header">The community</h1>
           <h2 class="hero__right-details">
