adding gallery + story title

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -21,6 +21,9 @@
   <body>
     <a href="/index.html" class="back">&rarr;</a>
     <section class="master">
+      <h1 class="h1-header text-center margin-bottom-mid margin-top-mid">
+        General info!
+      </h1>
       <div class="master__header master__header-1">
         <div class="box1">
           This is floppa!
@@ -73,7 +76,64 @@
       </div>
     </section>
     <section class="gallery">
-      <h1 class="h1-header text-center margin-bottom-mid">Floppa gallery!</h1>
+      <h1 class="h1-header text-center margin-bottom-mid margin-top-mid">
+        Floppa gallery!
+      </h1>
+      <div class="gallery__grid">
+        <div>
+          <img src="content/gallery/1.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/2.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/3.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/4.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/5.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/6.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/7.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/8.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/9.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/10.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/11.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/12.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/13.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/14.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/15.jpg" alt="floppa pic" />
+        </div>
+        <div>
+          <img src="content/gallery/16.jpg" alt="floppa pic" />
+        </div>
+      </div>
+    </section>
+    <section class="story">
+      <h1 class="h1-header text-center margin-bottom-mid margin-top-big">
+        Floppa Story!
+      </h1>
     </section>
   </body>
 </html>
