--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -76,7 +76,9 @@
       </div>
     </section>
     <section class="gallery">
-      <h1 class="h1-header text-center margin-bottom-mid margin-top-mid">
+      <h1
+        class="h1-header text-center margin-bottom-mid margin-top-mid gallery_title"
+      >
         Floppa gallery!
       </h1>
       <div class="gallery__grid">
