added coming soon to story section

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -134,7 +134,7 @@
     </section>
     <section class="story">
       <h1 class="h1-header text-center margin-bottom-mid margin-top-big">
-        Floppa Story!
+        Floppa Story! (coming soon)
       </h1>
     </section>
   </body>
