changed the back button

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -19,7 +19,9 @@
     <title>FloppaHub</title>
   </head>
   <body>
-    <a href="/index.html" class="back">&rarr;</a>
+    <div class="nav">
+      <a href="/index.html" class="nav__button"></a>
+    </div>
     <section class="master">
       <h1 class="h1-header text-center margin-bottom-mid margin-top-mid">
         General info!
@@ -134,7 +136,7 @@
     </section>
     <section class="story">
       <h1 class="h1-header text-center margin-bottom-mid margin-top-big">
-        Floppa Story! (coming soon)
+        Floppa Story!
       </h1>
     </section>
   </body>
