fixed some pictures size bugs

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -20,8 +20,18 @@
   </head>
   <body>
     <div class="nav">
-      <a href="/index.html" class="nav__button"></a>
+      <a href="#" class="nav__button nav__button-clicked"></a>
     </div>
+    <div class="menu hidden">
+      <ul class="menu__list">
+        <h6>not finished yet</h6>
+        <a href="#master"><li>Section 1</li></a>
+        <a href="#"><li>Section 2</li></a>
+        <a href="#"><li>Section 3</li></a>
+        <a href="#"><li>Section 4</li></a>
+      </ul>
+    </div>
+
     <section class="master">
       <h1 class="h1-header text-center margin-bottom-mid margin-top-mid">
         General info!
@@ -140,4 +150,5 @@
       </h1>
     </section>
   </body>
+  <script src="scripts/script.js"></script>
 </html>
