finished the story section!

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -196,9 +196,192 @@
       </div>
     </section>
     <section class="story" id="story">
-      <h1 class="h1-header text-center margin-bottom-mid margin-top-big">
-        Floppa Story! (Coming soon..)
-      </h1>
+      <h1 class="h1-header text-center margin-top-big">Floppa Story!</h1>
+      <div class="story__box story__box-1">
+        <img src="content/Story/Story1.png" alt="floppa pic" />
+        <div class="story__box-container">
+          <blockquote class="story__box_blackquote">
+            <p class="story__box_blackquote-text">
+              "The Floppa mod for GTA San Andreas has gained a huge following
+              among gamers and meme enthusiasts alike. The mod features Floppa
+              as a playable character, allowing players to control the lovable
+              feline as he explores the game's vast world."
+            </p>
+            <p class="story__box_blackquote-poster">John Williams Smith</p>
+            <p class="story__box_blackquote-company">rockstar games</p>
+          </blockquote>
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-right"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 4.5l7.5 7.5-7.5 7.5"
+          />
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-left"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 19.5L8.25 12l7.5-7.5"
+          />
+        </svg>
+      </div>
+
+      <div class="story__box story__box-2 hidden">
+        <img src="content/Story/Story2.png" alt="floppa pic" />
+        <div class="story__box-container">
+          <blockquote class="story__box_blackquote">
+            <p class="story__box_blackquote-text">
+              "Floppa's friend's "Abushoqi", on the other hand, is a relatively
+              new character that emerged in the Arab meme culture. He is a
+              fictional character that represents a stereotypical adult An owl
+              with a lion's head who is often depicted in humorous situations."
+            </p>
+            <p class="story__box_blackquote-poster">George Macmillan</p>
+            <p class="story__box_blackquote-company">Syrian government</p>
+          </blockquote>
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-right"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 4.5l7.5 7.5-7.5 7.5"
+          />
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-left"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 19.5L8.25 12l7.5-7.5"
+          />
+        </svg>
+      </div>
+
+      <div class="story__box story__box-3 hidden">
+        <img
+          src="content/Story/Story3.png"
+          alt="floppa pic"
+          style="width: 80% !important"
+        />
+        <div class="story__box-container">
+          <blockquote class="story__box_blackquote">
+            <p class="story__box_blackquote-text">
+              ""Answer honestly, if this was your father, would you be proud of
+              him?", this was the question that 99.99% of people couldn't
+              answer!."
+            </p>
+            <p class="story__box_blackquote-poster">John Williams Smith</p>
+            <p class="story__box_blackquote-company">also rockstar games</p>
+          </blockquote>
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-right"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 4.5l7.5 7.5-7.5 7.5"
+          />
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-left"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 19.5L8.25 12l7.5-7.5"
+          />
+        </svg>
+      </div>
+
+      <div class="story__box story__box-4 hidden">
+        <img src="content/Story/Story4.png" alt="floppa pic" />
+        <div class="story__box-container">
+          <blockquote class="story__box_blackquote">
+            <p class="story__box_blackquote-text">
+              "Abdulaziz A'l Floppa is a person of great confidence and
+              charisma. His magnetic personality draws people towards him, and
+              he is often the center of attention in any social gathering. He
+              has a natural talent for networking and making connections, and
+              his business acumen is highly respected in his circles."
+            </p>
+            <p class="story__box_blackquote-poster">Hatim al arabi 2</p>
+            <p class="story__box_blackquote-company">(no company found)</p>
+          </blockquote>
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-right"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 4.5l7.5 7.5-7.5 7.5"
+          />
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="story__box-arrow story__box-arrow-left"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 19.5L8.25 12l7.5-7.5"
+          />
+        </svg>
+      </div>
+      <div class="story__dots">
+        <div class="dot fill">&nbsp;</div>
+        <div class="dot">&nbsp;</div>
+        <div class="dot">&nbsp;</div>
+        <div class="dot">&nbsp;</div>
+      </div>
     </section>
   </body>
   <script src="scripts/script.js"></script>
