added some margin bottom to story

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -195,7 +195,7 @@
         </div>
       </div>
     </section>
-    <section class="story" id="story">
+    <section class="story margin-bottom-mid" id="story">
       <h1 class="h1-header text-center margin-top-big">Floppa Story!</h1>
       <div class="story__box story__box-1">
         <img src="content/Story/Story1.png" alt="floppa pic" />
