fixed some story section bugs

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -289,7 +289,7 @@
         <img
           src="content/Story/Story3.png"
           alt="floppa pic"
-          style="width: 80% !important"
+          style="width: 80%"
         />
         <div class="story__box-container">
           <blockquote class="story__box_blackquote">
