fixed some sizes bugs

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -383,11 +383,7 @@
       </div>
 
       <div class="story__box story__box-3 hidden">
-        <img
-          src="content/Story/Story3.png"
-          alt="floppa pic"
-          style="width: 80%"
-        />
+        <img src="content/Story/Story3.png" alt="floppa pic" />
         <div class="story__box-container">
           <blockquote class="story__box_blackquote">
             <p class="story__box_blackquote-text">
