fixed some bugs

--- a/TheCommunity/TheCommunity.html
+++ b/TheCommunity/TheCommunity.html
@@ -4,8 +4,79 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="icon" href="../StartMenu/content/floppa2.jpg" />
+    <title>FloppaHub - The community</title>
   </head>
   <body>
-    <h1>Coming soon..</h1>
+    <div class="master">
+      <div class="master__sidebar">
+        <div class="master__sidebar__users">
+          <div class="user">
+            <div class="user__photo">
+              <img src="content/global.png" alt="profile picture" />
+            </div>
+            <h1 class="user__name global">Global chat</h1>
+          </div>
+
+          <div class="user">
+            <div class="user__photo">
+              <img src="content/pfp/pfp1.png" alt="profile picture" />
+            </div>
+            <div class="box">
+              <h1 class="user__name">Aymen Bazyan</h1>
+              <h2 class="user__id">#00001</h2>
+            </div>
+          </div>
+
+          <div class="user">
+            <div class="user__photo">
+              <img src="content/pfp/pfp2.png" alt="profile picture" />
+            </div>
+            <div class="box">
+              <h1 class="user__name">Abod Bazyan</h1>
+              <h2 class="user__id">#00002</h2>
+            </div>
+          </div>
+
+          <div class="user">
+            <div class="user__photo">
+              <img src="content/unknown.png" alt="profile picture" />
+            </div>
+            <div class="box">
+              <h1 class="user__name">unknown</h1>
+              <h2 class="user__id">#00003</h2>
+            </div>
+          </div>
+
+          <div class="user">
+            <div class="user__photo">
+              <img src="content/pfp/pfp3.png" alt="profile picture" />
+            </div>
+            <div class="box">
+              <h1 class="user__name">Hatim alarabi 2</h1>
+              <h2 class="user__id">#00004</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="master__chat default">
+        <div class="master__chat__default">
+          Start chatting with your friends!
+        </div>
+      </div>
+      <div class="master__settings">settings</div>
+    </div>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
