fixed some bugs

--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -278,7 +278,7 @@
         </div>
       </div>
       <div class="float__overlay hidden"></div>
-      <div class="float__arrows">
+      <div class="float__arrows hidden">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
