--- a/TheCommunity/TheCommunity.html
+++ b/TheCommunity/TheCommunity.html
@@ -74,6 +74,14 @@
         <div class="master__chat__default">
           Start chatting with your friends!
         </div>
+        <div class="master__chat__global hidden">
+          <input
+            type="text"
+            class="master__chat__global-input"
+            placeholder="Type your message here!"
+          />
+          <button class="master__chat__global-submit">Send</button>
+        </div>
       </div>
       <div class="master__settings">settings</div>
     </div>
