--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="FloppaHub is the best well-designed website thats only talks about floppa!, it gives you general info about floppa and a whole community to talk with!."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +20,7 @@
     />
     <link rel="stylesheet" href="StartMenu/styles/main.css" />
     <link rel="icon" href="StartMenu/content/floppa2.jpg" />
-    <title>FloppaHub</title>
+    <title>FloppaHub &mdash; Menu</title>
   </head>
   <body>
     <div class="hero">
