--- a/MainPage/MainPage.html
+++ b/MainPage/MainPage.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" href="/StartMenu/content/floppa2.jpg" />
-    <title>FloppaHub</title>
+    <title>FloppaHub &mdash; Main page</title>
   </head>
   <body>
     <div class="preloader"></div>
