--- a/TheCommunity/TheCommunity.html
+++ b/TheCommunity/TheCommunity.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" href="../StartMenu/content/floppa2.jpg" />
-    <title>FloppaHub - The community</title>
+    <title>FloppaHub &mdash; The community</title>
   </head>
   <body>
     <div class="master">
